test/classes/nilability/error-value-q.chpl
class C { }

var x = new C();
var y = x.borrow();
var z = y?;
